# asnet-ip

./: .gitignore  LICENSE  README.md  coverage.py  experiments.py  main.py  ppddl_parser.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: build.yml
asnet/: asnet.py  asnet_alt.py  asnet_no_lmcut.py  custom_layers.py  lm_cut.py  relations.py  trainer.py  training_helper.py  weight_transfer.py
asnet/heuristics/: delete_relaxation.py  hmax.py  lm_cut.py  null_heuristic.py
asnet/planners/: lrtdp.py  rtdp.py  stlrtdp.py
asnet/sysadmin/: auxiliary.py
problems/: PROBLEMS.md
problems/blocksworld/: 10blocks.pddl  5blocks.pddl  domain.pddl  generate.py
problems/deterministic_blocksworld/: domain.pddl  generate.py  pb1.pddl  pb10.pddl  pb2.pddl  pb3.pddl  pb4.pddl  pb5.pddl  pb5_p00.pddl  pb5_p01.pddl  pb5_p02.pddl  pb5_p03.pddl  pb6.pddl
problems/icaps2011/: website.txt
problems/icaps2011/navigation/: navigation_inst_mdp__10.ppddl  navigation_inst_mdp__2.ppddl  navigation_inst_mdp__3.ppddl  navigation_inst_mdp__4.ppddl  navigation_inst_mdp__5.ppddl  navigation_inst_mdp__6.ppddl  (+3 more)
problems/ip_blocksworld/: domain.pddl  generate.py
problems/ip_sys_admin/: generate.py
problems/sys_admin/: domain_ip.pddl  generate.py
problems/triangle-tireworld/: domain.pddl
problems/triangle_tireworld/: domain_ip.pddl  generate.py
results/: bw_0_20.json  bw_20_40.json  bw_3each.json  bw_3each_3layers.json  bw_4easy.json  bw_4easy_3layers.json  bw_4easy_4layers.json  bw_det_0_20  bw_det_20_40  bw_det_3each  bw_det_4easy  bw_ip_0_20.json
(+8 files in other folders)
